# nl2sql_project

./: .env  README.md  cli.py  college.sql  main.py  pyproject.toml  requirements.txt
core/: llm_handler.py  orchestrator.py  security.py
mcp_server/: server.py
streamlit_app/: app.py
